# VRPDet

./: README.md
VRPDet/: settings.gradle
VRPDet/app/: build.gradle
VRPDet/app/src/androidTest/java/com/example/lzqtest/: ExampleInstrumentedTest.java
VRPDet/app/src/main/: AndroidManifest.xml
VRPDet/app/src/main/assets/: result.txt
VRPDet/app/src/main/java/com/example/lzqtest/: MainActivity.java
VRPDet/app/src/main/res/values/: strings.xml
VRPDet/app/src/main/res/values-night/: themes.xml
VRPDet/app/src/test/java/com/example/lzqtest/: ExampleUnitTest.java
VRPDet/gradle/wrapper/: gradle-wrapper.properties
VRPDet/vrpdet/: build.gradle
VRPDet/vrpdet/src/androidTest/java/com/example/varpcheck/: ExampleInstrumentedTest.java
VRPDet/vrpdet/src/main/: AndroidManifest.xml
VRPDet/vrpdet/src/main/java/com/example/vrpdet/: AssetsReader.java  DataLocCheck.java  HookStackTrace.java  JniNative.java  PermissionCheck.java  VAStackTrace.java  VRPDet.java
VRPDet/vrpdet/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  jninative.cpp  jninative.h  log.h
VRPDet/vrpdet/src/main/res/values/: strings.xml  themes.xml
VRPDet/vrpdet/src/test/java/com/example/varpcheck/: ExampleUnitTest.java
anaylizeApk/: alsmanifest.py  alspack.py  alsso.py  analizeapk.py  main.py  private_key.pem  shelldeal.py  sign_result.py
anaylizeApk/APK/: app-debug.apk
